# Hyperion

./: CMakeLists.txt  LICENSE  README.md  main.cpp
geometry/: Shape.h  Shape2D.h  Shape3D.cpp  Shape3D.h
graphics/: Camera.cpp  Camera.h  Renderer.cpp  Renderer.h  ScreenBuffer.cpp  ScreenBuffer.h
math/: Complex.cpp  Complex.h  Constants.h  MathUtils.h  Quaternion.cpp  Quaternion.h  Vector3.cpp  Vector3.h
screen/: Renderer.cpp  Renderer.h  ScreenBuffer.cpp  ScreenBuffer.h
shapes/: Cube.cpp  Cube.h  Rectangle.cpp  Rectangle.h  Triangle.cpp  Triangle.h
